<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="mCompartilhar"
        android:icon="@drawable/baseline_share"
        android:title="@string/compartilhar"
        app:showAsAction="ifRoom" />

    <item
        android:id="mFavoritar"
        android:icon="@drawable/baseline_star"
        android:title="@string/favoritar"
        app:showAsAction="ifRoom" />
    <item
        android:id="mStatus"
        android:icon="@drawable/baseline_bar_chart"
        android:title="@string/status"
        app:showAsAction="ifRoom" />
    <item
        android:id="mConversar"
        android:icon="@drawable/baseline_chat"
        android:title="@string/conversar"
        app:showAsAction="ifRoom" />
    <item
        android:id="mDownloads"
        android:icon="@drawable/baseline_download"
        android:title="@string/downloads"
        app:showAsAction="ifRoom" />
</menu>