<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/mArquivo"
        android:icon="@drawable/baseline_file"
        android:title="@string/arquivo"
        app:showAsAction="ifRoom"
        />
    <item
        android:id="@+id/mEdit"
        android:icon="@drawable/baseline_edit"
        android:title="@string/editar"
        app:showAsAction="ifRoom"
        />
    <item
        android:id="@+id/mDelete"
        android:icon="@drawable/baseline_delete"
        android:title="@string/deletar"
        app:showAsAction="ifRoom"
        />
    <item
        android:id="@+id/mPesquisar"
        android:icon="@drawable/baseline_search"
        android:title="@string/pesquisar"
        app:showAsAction="ifRoom"
        />
    <item
        android:id="@+id/mSair"
        android:icon="@drawable/baseline_exit"
        android:title="@string/sair"
        app:showAsAction="ifRoom"
        />
</menu>